CHANGES
=======

* Refactor the saliere module
* Reorganize code and template structure
* Update the requirements

0.1.2
-----

* Fix a bug related to the output directory

0.1.1
-----

* Fix the packaging
* Update the documentation

0.1
---

* Enforce unicode strings in the Sphinx configuration
* Update the .gitgnore file
* Fix the packaging
* Add the Read the docs badge to the README.rst file
* Add the requires.io badge to the README.rst file
* Final things before commit
* First commit